--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,22 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+bcrypt==3.2.2
+cffi==1.15.0
+cryptography==37.0.2
 dj-database-url==0.5.0
 Django==3.2.12
 django-heroku==0.3.1
 django-on-heroku==1.1.2
+Fabric3==1.14.post1
 gunicorn==20.1.0
+paramiko==2.11.0
 psycopg2==2.9.3
 psycopg2-binary==2.9.3
+pycparser==2.21
+PyNaCl==1.5.0
 pytz==2022.1
 selenium==3.141.0
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
 urllib3==1.26.9
