--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ psycopg2==2.9.3
 psycopg2-binary==2.9.3
 pycparser==2.21
 PyNaCl==1.5.0
+python-dotenv==0.20.0
 pytz==2022.1
 selenium==3.141.0
 six==1.16.0
